--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 # pip install PyPDF2 nltk spacy scikit-learn
 # python -m spacy download en_core_web_sm
 # python -m nltk.downloader stopwords
-PyPDF2
-nltk
-spacy
-scikit-learn
+#PyPDF2
+#nltk
+#spacy
+#scikit-learn
+
+PyPDF2=3.0.1
+nltk=3.9.1
+spacy=3.8.4
+scikit-learn=1.6.1
