--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #spacy
 #scikit-learn
 
-PyPDF2=3.0.1
-nltk=3.9.1
-spacy=3.8.4
-scikit-learn=1.6.1
+PyPDF2==3.0.1
+nltk==3.9.1
+spacy==3.8.4
+scikit-learn==1.6.1
